# neovide

./: .codespellignore  .editorconfig  .gitignore  .gitmodules  .luarc.json  .nvim-dap.lua  .ok  .pre-commit-config.yaml  404.html  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  api.html  build.rs  command-line-reference.html  commands.html  config-file.html  configuration.html  default.profraw  editing-with-external-tools.html  faq.html  features.html  index.html  installation.html  integration-with-external-tools.html  juice.css  maintainer-cookbook.html  print.html  robots.txt  rust-toolchain.toml  rustfmt.toml  searchindex.js  searchindex.json  sitemap.xml  sponsor.html  troubleshooting.html
.config/: nextest.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  PULL_REQUEST_TEMPLATE.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  clippy.yml  lint-app.yml  lint-website.yml  lint.yml  nightly.yml  pre-commit.yml  release-check-frozen.yml  release.yml  rust.yml  snap.yaml  test-results.yml  upload_asset.sh  validate-flatpak-metainfo.yml  website.yml
assets/: README.md  neovide-dmg-background.tiff  neovide.desktop
assets/dmg-background/: README.md
assets/psd/: background.psd
extra/osx/Neovide.app/Contents/: Info.plist
flatpak/: dev.neovide.Neovide.metainfo.xml  dev.neovide.neovide.metainfo.xml
glutin-winit/: CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
glutin-winit/src/: lib.rs  window.rs
lua/: cmd.lua  exit_handler.lua  image.lua  ime_handler.lua  init.lua  intro.lua
lua/modules/: cursor.lua  touch_pad_pressure.lua
macos-builder/: make-icns  readme.md  run
neovide/: Cargo.toml
neovide-derive/: Cargo.toml  README.md
neovide-derive/src/: lib.rs
neovide/src/: error_handling.rs  main.rs  redraw_scheduler.rs
neovide/src/bridge/: mod.rs
neovide/src/renderer/: mod.rs
neovide/src/renderer/cursor_renderer/: mod.rs
neovide/src/settings/: from_value.rs  mod.rs
neovide/src/window/: settings.rs
neovide/src/window/keyboard/: mod.rs  settings.rs
scripts/: addtypes.sh
snap/: snapcraft.yaml
src/: application.rs  channel_utils.rs  clipboard.rs  cmd_line.rs  dimensions.rs  editor.rs  error_handling.rs  event_aggregator.rs  events.rs  frame.rs  keybindings.rs  lib.rs  main.rs  redraw_scheduler.rs  running_tracker.rs  settings.rs  ui_commands.rs  units.rs  version.rs  window.rs  windows_utils.rs
src/bridge/: api_info.rs  clipboard.rs  command.rs  connection.rs  create.rs  events.rs  extractor.lua  handler.rs  keybindings.rs  keyboard_manager.rs  mod.rs  restart.rs  session.rs  setup.rs  tx_wrapper.rs  ui_commands.rs  url_allowlist.rs
src/bridge/layouts/: glfw.rs  keypress.rs  mod.rs  qwerty.rs  sdl2.rs  winit.rs
src/clipboard/: mod.rs
src/editor/: command_line.rs  cursor.rs  draw_command_batcher.rs  grid.rs  intro.rs  mod.rs  style.rs  style_registry.rs  window.rs
src/ipc/: handoff.rs  mod.rs
src/platform/: mod.rs
src/platform/linux/: bridge.rs  clipboard.rs  mod.rs  opengl.rs  vsync.rs  window.rs
src/platform/macos/: editor.rs  hotkey.rs  keyboard.rs  mod.rs  renderer.rs  settings.rs  vsync.rs  window.rs  window_wrapper.rs
src/platform/windows/: bridge.rs  error_handling.rs  mod.rs  profiling.rs  renderer.rs  settings.rs  utils.rs  window.rs  window_wrapper.rs
src/profiling/: d3d.rs  mod.rs  opengl.rs  profiling_disabled.rs  profiling_enabled.rs
src/renderer/: animation_utils.rs  cached_background_renderer.rs  caching_shaper.rs  cursor_renderer.rs  d3d.rs  font_options.rs  fonts.rs  fps_tracker.rs  grid_renderer.rs  image_renderer.rs  ime.rs  kitty_image.rs  metal.rs  mod.rs  opengl.rs  profiler.rs  progress_bar.rs  rendered_layer.rs  rendered_window.rs  renderer.rs  settings.rs  utils.rs
src/renderer/box_drawing/: box_drawing_test.txt  mod.rs  renderer.rs  settings.rs
src/renderer/cursor_renderer/: animation_utils.rs  blink.rs  cursor_vfx.rs  mod.rs
src/renderer/fonts/: atlas.rs  caching_shaper.rs  extended_font_family.rs  font_loader.rs  font_options.rs  font_slant.rs  font_weight.rs  glyph_cache.rs  mod.rs  swash_font.rs  utils.rs
src/renderer/pipeline/: background.rs  camera.rs  glyph.rs  mod.rs
src/renderer/shaders/: background.wgsl  glyph.wgsl
src/renderer/vsync/: macos_display_link.rs  mod.rs  vsync_macos.rs  vsync_macos_display_link.rs  vsync_timer.rs  vsync_wayland.rs  vsync_win.rs  vsync_win_dwm.rs  vsync_win_swap_chain.rs
src/settings/: cmd_line.rs  config.rs  config_file.rs  draw_background.rs  font.rs  from_value.rs  into_value.rs  mod.rs  nvim_state.rs  window_geometry.rs  window_size.rs  windows_registry.rs
src/utils/: dimensions.rs  frame.rs  mod.rs  ring_buffer.rs  test.rs
src/window/: application.rs  draw_background.rs  error_window.rs  glfw.rs  keyboard.rs  keyboard_manager.rs  keypress.rs  macos.rs  manager.rs  mod.rs  modifiers.rs  mouse_manager.rs  neovim_window.rs  renderer.rs  sdl2.rs  settings.rs  update_loop.rs  window_wrapper.rs  winit.rs
src/window/glutin/: mod.rs  renderer.rs
src/window/keyboard/: layout.rs  mod.rs  modifiers.rs  settings.rs  token.rs
src/window/layouts_shared/: keyboard.rs  mod.rs  token.rs
src/window/macos/: hotkey.rs  mod.rs  tab_navigation.rs
src/window/sdl2/: mod.rs
src/window/window_wrapper/: keyboard_manager.rs  mod.rs  mouse_manager.rs  renderer.rs
src/window/winit/: manager.rs  mod.rs
theme/: custom.css  custom.js  pagetoc.css
ubuntu-builder/: Dockerfile  build-appimage  build-dockerimage  run
website/: .gitignore  .markdownlintrc  Makefile  README.md  book.toml  config.toml  riss.awk
website/content/: _index.md
website/docs/: SUMMARY.md  api.md  command-line-reference.md  commands.md  config-file.md  configuration.md  editing-with-external-tools.md  faq.md  features.md  index.md  installation.md  integration-with-external-tools.md  maintainer-cookbook.md  sponsor.md  troubleshooting.md
website/static/: CNAME
website/templates/: _variables.html  index.html
website/theme/: breakpoints.css  custom.css  custom.js  index.hbs  pagetoc.js
wix/: license.rtf  main.wxs
(+13 files in other folders)
