[package]
name = "neovide"
version = "0.15.1"
edition = "2021"
build = "build.rs"
resolver = "2"
license = "MIT"
description = "Neovide: No Nonsense Neovim Gui"
homepage = "https://neovide.dev/"
repository = "https://github.com/neovide/neovide"
readme = "README.md"
keywords = ["neovim", "nvim", "gui"]
exclude = [
    "website/*",
    "ubuntu-builder/*",
    "wix/*",
    "macos-builder/*",
    ".vscode/**/*",
    ".github/**/*",
    "assets/dmg-background/**/*",
    "assets/neovide-*.png",
    "assets/neovide.svg",
    "*.md",
    "scripts/*.sh",
    "docs/*",
    "target/*",
    ".gitignore",
    "stylua.toml",
]

[workspace]
members = ["neovide-derive"]

[features]
default = []
embed-fonts = []
profiling = ["dep:tracy-client-sys"]
gpu_profiling = ["profiling"]
# Corresponds to https://github.com/nagisa/rust_tracy_client/blob/main/FEATURES.mkd
tracy-system-tracing = ["tracy-client-sys?/system-tracing"]
tracy-context-switch-tracing = ["tracy-client-sys?/context-switch-tracing"]
tracy-sampling = ["tracy-client-sys?/sampling"]
tracy-code-transfer = ["tracy-client-sys?/code-transfer"]
tracy-callstack-inlines = ["tracy-client-sys?/callstack-inlines"]
d3d_debug = [] # Enable the D3D debug layer

[dependencies]
anyhow = { version = "1.0.95", features = ["backtrace"] }
approx = "0.5.1"
async-trait = "0.1.83"
backtrace = "0.3.74"
clap = { version = "4.5.23", features = ["cargo", "derive", "env", "color"] }
copypasta = "0.10.1"
rustc-hash = "2.0.0"
csscolorparser = "0.7.0"
derive-new = "0.7.0"
dirs = "6.0.0"
glamour = { version = "0.16.0", features = ["serde"] }
flexi_logger = { version = "0.30.0", default-features = false }
futures = "0.3.31"
gl = "0.14.0"
# glutin = "0.32.0"
# glutin = { path = "/Users/falcucci/clones/glutin/glutin" }
glutin = { git = "https://github.com/falcucci/glutin.git", branch = "multi-window-support" }
# glutin-winit = "0.5.0"
# glutin-winit = { path = "/Users/falcucci/clones/glutin/glutin-winit" } 
glutin-winit = { git = "https://github.com/falcucci/glutin.git", branch = "multi-window-support" }
image = { version = "0.25.5", default-features = false, features = ["ico"] }
indoc = "2.0.5"
itertools = "0.14.0"
log = "0.4.22"
lru = "0.13.0"
neovide-derive = { path = "neovide-derive", version = "0.1.3" }
num = "0.4.3"
nvim-rs = { version = "0.9.2", features = ["use_tokio"] }
parking_lot = "0.12.3"
rand = "0.9.0"
raw-window-handle = "0.6.2"
rmpv = "1.3.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
shlex = "1.3.0"
spin_sleep = "1.3.0"
strum = { version = "0.26.3", features = ["derive"] }
swash = { version = "0.2.1", default-features = false, features = [ "std"  ] }
time = { version = "0.3.37", features = ["macros", "formatting"] }
tokio = { version = "1.42.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["compat"] }
toml = "0.8.19"
tracy-client-sys = { version = "0.24.3", optional = true, default-features = false, features = [
    "broadcast",
    "delayed-init",
    "enable",
    "manual-lifetime",
    "fibers",
] }
unicode-segmentation = "1.12.0"
which = "7.0.1"
# winit = { version = "=0.30.5", features = ["serde"] }
# winit = { path = "/Users/falcucci/clones/winit", features = ["serde"] }
winit = { git = "https://github.com/falcucci/winit.git", branch = "multi-window-support", features = ["serde"] }
xdg = "2.5.2"
notify-debouncer-full = "0.5.0"
regex = "1.11.1"

[dev-dependencies]
scoped-env = "2.1.0"
serial_test = "3.2.0"

[target.'cfg(target_os = "windows")'.dependencies]
wslpath-rs = "0.2"
skia-safe = { version = "0.84.0", features = ["gl", "d3d", "textlayout"] }
windows = { version = "0.61.1", features = [
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_DirectComposition",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Security",
    "Win32_System_Console",
    "Win32_System_Performance",
    "Win32_System_Threading",
    "Win32_UI_HiDpi",
] }
windows-registry = "0.5.1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5.2"
objc2-foundation = { version = "0.2.2", default-features = false, features = [
    "std",
    "NSUserDefaults",
] }
objc2-app-kit = { version = "0.2.2", default-features = false, features = [
    "std",
    "NSLayoutConstraint",
    "NSColorSpace",
    "objc2-quartz-core",
] }
objc2-quartz-core = { version = "0.2.2", default-features = false, features = [
    "std",
    "objc2-metal",
    "CALayer",
    "CAMetalLayer",
] }
objc2-metal = { version = "0.2.2", default-features = false, features = [
    "std",
    "MTLCommandQueue",
    "MTLCommandBuffer",
] }
skia-safe = { version = "0.84.0", features = ["metal", "gl", "textlayout"] }
uzers = "0.12.1"


[target.'cfg(not(any(target_os = "windows", target_os = "macos")))'.dependencies]
skia-safe = { version = "0.84.0", features = ["gl", "textlayout"] }

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1.12"

[profile.release]
lto = true
incremental = true
strip = true

[profile.profiling]
inherits = "release"
strip = false
debug = true

[package.metadata.bundle]
name = "Neovide"
identifier = "com.neovide.neovide"
icon = ["assets/neovide.ico"]
version = "0.15.1"
resources = []
copyright = "Copyright (c) Neovide Contributors 2025. All rights reserved."
category = "Productivity"
short_description = "A simple GUI for Neovim."
long_description = """
This is a simple graphical user interface for Neovim. Where possible there are some graphical improvements, but it should act functionally like the terminal UI.
"""
osx_minimum_system_version = "10.11"
